Trying to run locally. added projectstoretest